error2.txt
bnd: release tasks in execution graph = 0
bnd: release tasks in execution graph = 0
bnd: release tasks in execution graph = 0
bnd: release tasks in execution graph = 0
bnd: release tasks in execution graph = 0
bnd: release tasks in execution graph = 0
> Task :io.openems.wrapper:compileJava NO-SOURCE
> Task :io.openems.wrapper:processResources NO-SOURCE
> Task :io.openems.wrapper:classes UP-TO-DATE
> Task :io.openems.backend.common:processResources UP-TO-DATE
> Task :io.openems.wrapper:jar UP-TO-DATE
> Task :io.openems.common:processResources UP-TO-DATE
> Task :io.openems.common:compileJava UP-TO-DATE
> Task :io.openems.common:classes UP-TO-DATE
> Task :io.openems.common:jar UP-TO-DATE
> Task :io.openems.backend.common:compileJava UP-TO-DATE
> Task :io.openems.backend.common:classes UP-TO-DATE
> Task :io.openems.backend.common:jar UP-TO-DATE
C:\Users\AnasBELKADI\openems\io.openems.backend.core\src\io\openems\backend\core\jsonrpcrequesthandler\ChannelAggregationHandler.java:169: error: no suitable constructor found for EdgeChannelAddress(String,ChannelAddress)

> Task :io.openems.backend.core:compileJava FAILED
					channelScalars.put(new EdgeChannelAddress(edgeId, channel), val.getAsNumber());
					                   ^
    constructor EdgeChannelAddress.EdgeChannelAddress(String,String,String) is not applicable
      (actual and formal argument lists differ in length)
    constructor EdgeChannelAddress.EdgeChannelAddress(String,ChannelAddress,String) is not applicable
      (actual and formal argument lists differ in length)
C:\Users\AnasBELKADI\openems\io.openems.backend.core\src\io\openems\backend\core\jsonrpcrequesthandler\ChannelAggregationHandler.java:206: error: no suitable constructor found for EdgeChannelAddress(String,ChannelAddress)
					channelScalars.put(new EdgeChannelAddress(edgeId, channel), val.getAsNumber());
					                   ^
    constructor EdgeChannelAddress.EdgeChannelAddress(String,String,String) is not applicable
      (actual and formal argument lists differ in length)
    constructor EdgeChannelAddress.EdgeChannelAddress(String,ChannelAddress,String) is not applicable
      (actual and formal argument lists differ in length)
C:\Users\AnasBELKADI\openems\io.openems.backend.core\src\io\openems\backend\core\jsonrpcrequesthandler\ChannelAggregationHandler.java:256: error: no suitable constructor found for EdgeChannelAddress(String,ChannelAddress)
					channelScalars.put(new EdgeChannelAddress(edgeId, channel), sum);
					                   ^
    constructor EdgeChannelAddress.EdgeChannelAddress(String,String,String) is not applicable
      (actual and formal argument lists differ in length)
    constructor EdgeChannelAddress.EdgeChannelAddress(String,ChannelAddress,String) is not applicable
      (actual and formal argument lists differ in length)
3 errors


[Incubating] Problems report is available at: file:///C:/Users/AnasBELKADI/openems/build/reports/problems/problems-report.html
FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':io.openems.backend.core:compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\AnasBELKADI\openems\io.openems.backend.core\src\io\openems\backend\core\jsonrpcrequesthandler\ChannelAggregationHandler.java:169: error: no suitable constructor found for EdgeChannelAddress(String,ChannelAddress)
  					channelScalars.put(new EdgeChannelAddress(edgeId, channel), val.getAsNumber());
  					                   ^
      constructor EdgeChannelAddress.EdgeChannelAddress(String,String,String) is not applicable
        (actual and formal argument lists differ in length)
      constructor EdgeChannelAddress.EdgeChannelAddress(String,ChannelAddress,String) is not applicable
        (actual and formal argument lists differ in length)
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 17s
8 actionable tasks: 1 executed, 7 up-to-date
